--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -1,9 +1,9 @@
 name: Update Analysis Data Files
 
 on:
-  # Runs on a schedule every 15 minutes (at :00, :15, :30, :45 past the hour)
+  # Runs on a schedule every 30 minutes (at :00 and :30 past the hour)
   schedule:
-    - cron: "*/30 * * * *"
+    - cron: "0,30 * * * *"
 
   # Allows you to run this workflow manually from the Actions tab on GitHub
   workflow_dispatch:
