--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -1,7 +1,9 @@
-name: Update Analysis Data Files
+# .github/workflows/main.yml
+
+name: Update Accurate Analysis Data Files
 
 on:
-  # Runs on a schedule every 30 minutes (at :00 and :30 past the hour)
+  # Runs on your schedule every 30 minutes
   schedule:
     - cron: "0,30 * * * *"
 
@@ -12,7 +14,7 @@ jobs:
   update-data:
     runs-on: ubuntu-latest
 
-    # Grant permissions for the GITHUB_TOKEN to be able to push to the repository.
+    # This permission is correct and is needed to push changes
     permissions:
       contents: write
 
@@ -21,13 +23,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Sets up Python
+      # 2. Sets up Python (using your preferred version 3.11)
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      # 3. Installs dependencies
+      # 3. Installs dependencies from your requirements.txt
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -37,11 +39,14 @@ jobs:
       - name: Run Python scripts to generate JSON
         run: |
           python sr_levels_analysis.py
-          python ma_analysis.py
+          # IMPORTANT: Run the NEW stateful script for MA analysis
+          python generate_accurate_ma.py
 
-      # 5. Use a dedicated action to commit and push changes
+      # 5. Commit and push ALL updated files (JSON and the new cache files)
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Automated analysis data update"
-          file_pattern: sr_levels_analysis.json ma_analysis.json
+          # CRITICAL CHANGE: We now include the .parquet cache files in the commit.
+          # This is what makes the script stateful and accurate.
+          file_pattern: sr_levels_analysis.json ma_analysis.json warmup_ohlc_data_fixed/*.parquet
