--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -3,50 +3,61 @@
 name: Update Accurate Analysis Data Files
 
 on:
-  # Runs on your schedule every 30 minutes
   schedule:
     - cron: "0,30 * * * *"
-
-  # Allows you to run this workflow manually from the Actions tab on GitHub
   workflow_dispatch:
 
 jobs:
   update-data:
     runs-on: ubuntu-latest
-
-    # This permission is correct and is needed to push changes
     permissions:
       contents: write
+      # Add permission for actions to read/write artifacts
+      actions: write 
 
     steps:
-      # 1. Checks out your repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Sets up Python (using your preferred version 3.11)
+      # --- START OF ARTIFACT LOGIC ---
+      - name: Download latest cache artifact
+        # This action finds the latest artifact from this workflow on this branch
+        uses: dawidd6/action-download-artifact@v3
+        with:
+          name: ohlc-cache
+          path: warmup_ohlc_data_fixed
+          # This is not an error if it's the first run, so we ignore failure
+          if_no_artifact_found: ignore
+      # --- END OF ARTIFACT LOGIC ---
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      # 3. Installs dependencies from your requirements.txt
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      # 4. Runs your Python scripts to generate the JSON files
       - name: Run Python scripts to generate JSON
         run: |
           python sr_levels_analysis.py
-          # IMPORTANT: Run the NEW stateful script for MA analysis
           python generate_accurate_ma.py
 
-      # 5. Commit and push ALL updated files (JSON and the new cache files)
-      - name: Commit and push changes
+      # --- START OF UPDATED ARTIFACT LOGIC ---
+      - name: Upload updated cache for next run
+        # This action uploads the folder as an artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ohlc-cache
+          path: warmup_ohlc_data_fixed/
+          retention-days: 7 # Keep the cache artifact for a week
+      # --- END OF UPDATED ARTIFACT LOGIC ---
+
+      - name: Commit and push ONLY JSON files
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Automated analysis data update"
-          # CRITICAL CHANGE: We now include the .parquet cache files in the commit.
-          # This is what makes the script stateful and accurate.
-          file_pattern: sr_levels_analysis.json ma_analysis.json warmup_ohlc_data_fixed/*.parquet
+          # We ONLY commit the small JSON files to the repository
+          file_pattern: sr_levels_analysis.json ma_analysis.json
