--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -4,15 +4,12 @@ name: Update Accurate Analysis Data Files
 
 on:
   schedule:
-    # Run every 15 minutes, with a 2-minute offset to ensure candles are closed.
     - cron: '2-59/15 * * * *'
   workflow_dispatch:
 
-# --- SOLUTION: ADD THIS CONCURRENCY GROUP ---
 concurrency:
   group: ${{ github.workflow }}
   cancel-in-progress: true
-# --- END OF SOLUTION ---
 
 jobs:
   update-data:
@@ -22,8 +19,6 @@ jobs:
 
     steps:
       - name: Checkout repository
-        # We add fetch-depth: 0 to get the full git history,
-        # which can help the commit action.
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -54,7 +49,8 @@ jobs:
         run: |
           echo "Cache not found. Seeding from release artifact..."
           gh release download v1.0-data -p "warmup_ohlc_data_fixed.zip"
-          unzip warmup_ohlc_data_fixed.zip -d .
+          # THIS IS THE CORRECTED LINE: Added the -o flag to force overwrite
+          unzip -o warmup_ohlc_data_fixed.zip -d .
           echo "Seeding complete. The warmup_ohlc_data_fixed directory is now populated."
           ls -R warmup_ohlc_data_fixed
 
