--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -1,6 +1,6 @@
 # .github/workflows/update_analysis_data.yml
 
-name: Update Accurate Analysis Data Files
+name: Update Analysis Data and Charts # <-- 1. Renamed for clarity
 
 on:
   schedule:
@@ -40,7 +40,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas requests pyarrow scipy scikit-learn
+          # <-- 2. Added matplotlib and mplfinance for the charting script
+          pip install pandas requests pyarrow scipy scikit-learn matplotlib mplfinance
 
       - name: Seed initial data if cache is empty
         if: steps.cache-ohlc.outputs.cache-hit != 'true'
@@ -53,24 +54,23 @@ jobs:
           echo "Seeding complete. The warmup_ohlc_data_fixed directory is now populated."
           ls -R warmup_ohlc_data_fixed
 
-      - name: Run Python scripts to generate JSON
+      - name: Run Analysis Scripts
         run: |
-          echo "--- Running MA script ---"
           python generate_accurate_ma.py
-          echo "--- Running S/R script ---"
           python sr_levels_analysis.py
-          echo "--- Scripts finished. Checking output files: ---"
-          ls -l *.json
 
-      # --- START: THIS IS THE NEW, CRITICAL FIX ---
+      # <-- 3. NEW STEP: Run the script to generate chart images from the analysis data
+      - name: Generate Chart Images
+        run: python generate_charts.py
+
       - name: Configure Git
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-      # --- END: NEW, CRITICAL FIX ---
-
-      - name: Commit and push ONLY JSON files
+      
+      - name: Commit and push data files and charts
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Automated analysis data update"
-          file_pattern: ma_analysis.json sr_levels_analysis.json
+          commit_message: "Automated analysis data and chart update"
+          # <-- 4. Updated file pattern to include the new JSON files AND the chart images
+          file_pattern: ma_analysis.json sr_levels_analysis.json market_opens.json charts/*.png
