--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas requests pyarrow scipy scikit-learn matplotlib mplfinance beautifulsoup4 lxml
+          pip install pandas requests pyarrow scipy scikit-learn matplotlib mplfinance
 
       - name: Run Analysis Scripts
         run: |
