--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -4,22 +4,19 @@ name: Update Analysis Data and Deploy to Pages
 
 on:
   push:
-    branches: ["main"] # Run on every push to the main branch
-  workflow_dispatch: # Allows manual runs
+    branches: ["main"]
+  workflow_dispatch:
 
-# Set permissions for the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write # Needed for the git-auto-commit step
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, cancel older runs
 concurrency:
   group: "pages"
   cancel-in-progress: true
 
 jobs:
-  # Job 1: Build the site by running Python scripts
   update-data:
     runs-on: ubuntu-latest
     steps:
@@ -31,39 +28,41 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      # --- THIS IS THE FINAL, CORRECT INSTALLATION STEP ---
+      - name: Install all dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas requests scipy scikit-learn matplotlib mplfinance beautifulsoup4 lxml
+          # Includes ALL libraries needed by ALL scripts:
+          # - pandas, requests: Core libraries
+          # - pyarrow: For the caching in generate_accurate_ma.py
+          # - scipy, scikit-learn: For advanced S/R analysis
+          # - matplotlib, mplfinance: For charting
+          # - beautifulsoup4, lxml: For the original, more robust proxy scraping
+          pip install pandas requests pyarrow scipy scikit-learn matplotlib mplfinance beautifulsoup4 lxml
 
-      - name: Run Analysis Scripts
+      - name: Run Analysis and Charting Scripts
         run: |
           python generate_accurate_ma.py
           python sr_levels_analysis.py
+          python generate_charts.py
 
-      - name: Generate Chart Images
-        run: python generate_charts.py
-      
-      - name: Verify generated files for artifact
+      # This step is for debugging and can be removed later if desired
+      - name: Verify generated files
         run: ls -R
 
-      # --- THIS IS THE CRITICAL "PACKAGING" STEP ---
+      # Use the upload-pages-artifact action to prepare for deployment
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload the entire repository content. This includes index.html, the generated
-          # JSON files, and the charts folder.
           path: '.'
 
-  # Job 2: Deploy the packaged site to GitHub Pages
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: update-data # This job will only run if the 'update-data' job succeeds
+    needs: update-data # This job runs only after the update-data job succeeds
     steps:
-      # --- THIS IS THE "DELIVERY" STEP ---
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
