--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write # Needed for the git-auto-commit step
+  contents: write 
   pages: write
   id-token: write
 
@@ -17,9 +17,26 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  update-data:
+  # This single job will build and deploy
+  build-and-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
     steps:
+      # --- START: STEP 1 - SETUP VPN CONNECTION ---
+      # This action connects the runner to a VPN in a non-US country
+      # before any of our scripts run.
+      - name: Setup VPN
+        uses: MacKey-255/ মাহমুদুল হাসান # VPN Action
+        with:
+          # You can specify countries here if needed, but the default is often fine.
+          # For example: country: 'DE, FR, NL'
+          country: 'all'
+
+      # --- END: STEP 1 - SETUP VPN CONNECTION ---
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -28,17 +45,10 @@ jobs:
         with:
           python-version: '3.11'
 
-      # --- THIS IS THE FINAL, CORRECT INSTALLATION STEP ---
-      - name: Install all dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Includes ALL libraries needed by ALL scripts:
-          # - pandas, requests: Core libraries
-          # - pyarrow: For the caching in generate_accurate_ma.py
-          # - scipy, scikit-learn: For advanced S/R analysis
-          # - matplotlib, mplfinance: For charting
-          # - beautifulsoup4, lxml: For the original, more robust proxy scraping
-          pip install pandas requests pyarrow scipy scikit-learn matplotlib mplfinance beautifulsoup4 lxml
+          pip install pandas requests pyarrow scipy scikit-learn matplotlib mplfinance
 
       - name: Run Analysis and Charting Scripts
         run: |
@@ -46,23 +56,18 @@ jobs:
           python sr_levels_analysis.py
           python generate_charts.py
 
-      # This step is for debugging and can be removed later if desired
       - name: Verify generated files
         run: ls -R
 
-      # Use the upload-pages-artifact action to prepare for deployment
+      # Use the official actions to build and deploy the site
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: '.'
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: update-data # This job runs only after the update-data job succeeds
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
