--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -24,7 +24,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
-      # --- START: NEW, SIMPLER, AND MORE RELIABLE VPN ACTION ---
+      # --- START: NEW, SIMPLER, AND MORE RELIABLE VPN sACTION ---
       # This action connects the runner to a VPN from a list of public servers.
       # It's much cleaner as it doesn't require embedding certificates.
       - name: Setup VPN Connection
