--- a/.github/workflows/update_analysis_data.yml
+++ b/.github/workflows/update_analysis_data.yml
@@ -24,7 +24,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
-      # --- START: NEW, VERIFIED, AND SIMPLER VPN ACTION ---
+      # --- START: NEW, VERIFIED, AsND SIMPLER VPN ACTION ---
       # This action connects to a free public VPN in Germany.
       # It downloads the configuration file directly, so no secrets are needed.
       - name: Setup VPN Connection
